infra/k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kikos-api
  namespace: kikos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kikos-api
  template:
    metadata:
      labels:
        app: kikos-api
    spec:
      containers:
        - name: kikos-api
          image: ilannildo/kikos-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
      imagePullSecrets:
              - name: regcred
