infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kikos-api
  namespace: kikos
spec:
  type: ClusterIP
  selector:
    app: kikos-api
  ports:
    - name: http
      port: 8082
      targetPort: 8082
