infra/k8s/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kikos-api
  namespace: kikos
spec:
  parentRefs:
    - name: main-gateway
      namespace: default      
  hostnames:
    - api.kikos.teragestor.com      
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kikos-api          
          port: 8082
